examples/errors/parsing/sort-params-no-lbrace.cn
sort Foo(a) = Bar : a

main : () [impure] = ()
